clusters/platform/compiled/networking.k8s.io-v1.Ingress-colorful-pandas-pr-275.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
    projectcontour.io/websocket-routes: /
  name: colorful-pandas-pr-275
  namespace: default
spec:
  ingressClassName: public
  rules:
  - host: pr-275.preview.colorful-pandas.com
    http:
      paths:
      - backend:
          service:
            name: colorful-pandas-pr-275
            port:
              name: server-http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pr-275.preview.colorful-pandas.com
    secretName: colorful-pandas-pr-275-tls
